# data-acquisition

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.md  WEBSOCKET_PROTOCOL.md  package-lock.json  package.json  rag_viz.py
universal-telemetry-software/: .env.example  =0.2.0  Caddyfile  Dockerfile  LED_BEHAVIOR.md  README.md  WEBSOCKET_PROTOCOL.md  WEBSOCKET_RUNTIME_NOTES.md  can-loopback-test.sh  car-camera.sdp  conftest.py  custom-jitsi-config.js  docker-compose.can-test.yml  docker-compose.jitsi.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  example.dbc  go2rtc.yaml  influxdb3-admin-token-test.json  influxdb3-admin-token.json  lan_sender.sh  main.py  main_chargecart.py  mediamtx.yml  pyproject.toml  requirements.txt  run_ci_tests.sh  setup-socketcan.sh  setup-static-ip.sh  setup.sh
universal-telemetry-software/car-jitsi-client/: Dockerfile  index.js  package.json
universal-telemetry-software/checklist/: .gitignore  SETUP_CARD.md  SETUP_CARD.tex
universal-telemetry-software/cloud-sync/: Dockerfile  app.py  config.py  requirements.txt  sync.py
universal-telemetry-software/deploy/: .env.base  .env.car  .env.macbook  .env.windows  CAR_DEPLOY.md  CHARGECART_DEPLOY.md  MACBOOK_DEPLOY.md  WHICH_ONE.md  car-telemetry.service  chargecart-cloudflared.service  chargecart-cloudflared.yml  chargecart-deploy.sh  chargecart-nginx.conf  chargecart-uts.service  ci-validate-compose.py  docker-compose.can-test.yml  docker-compose.jitsi.yml  docker-compose.lan-sender-test.yml  docker-compose.macbook-base.yml  (+19 more)
(+474 files in other folders)
