[project]
name = "universal-telemetry-software"
version = "0.1.0"
description = "WFR DAQ Telemetry Software"
requires-python = ">=3.11"
dependencies = [
    "python-can>=4.4.2",
    "redis>=5.2.1",
    "websockets>=14.1",
    "aiohttp>=3.11.11",
    "influxdb-client>=1.38.0",
    "cantools>=39.4.0",
    "slicks>=0.2.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
